ci: install saml2aws

--- a/.github/workflows/.ci.yml
+++ b/.github/workflows/.ci.yml
@@ -23,6 +23,11 @@ jobs:
       - name: Install Fisher > Fishtape > Pure
         run: curl -sL https://git.io/fisher | source && fisher install jorgebucaran/fisher jorgebucaran/fishtape ./
         shell: fish {0}
+      - name: Install Saml2aws
+        run: |
+          CURRENT_VERSION=$(curl -Ls https://api.github.com/repos/Versent/saml2aws/releases/latest | grep 'tag_name' | cut -d'v' -f2 | cut -d'"' -f1)
+          wget -c https://github.com/Versent/saml2aws/releases/download/v${CURRENT_VERSION}/saml2aws_${CURRENT_VERSION}_linux_amd64.tar.gz -O - | tar -xzv -C ~/.local/bin
+          chmod u+x ~/.local/bin/saml2aws
       - name: Test Pure
         run: fishtape tests/*.test.fish
         shell: fish {0}
