--- a/.github/workflows/.ci.yml
+++ b/.github/workflows/.ci.yml
@@ -50,7 +50,9 @@ jobs:
     strategy:
       matrix:
         fish_version:
-          - '3.1.2'
+          - '3.3.1'
+          - '3.4.1'
+          - '3.5.1'
     steps:
       - uses: actions/checkout@v2
       - name: Install Fish
@@ -61,6 +63,6 @@ jobs:
       - name: Install Just command runner
         run: sudo snap install --edge --classic just
       - name: Build image
-        run: just FISH_VERSION=3.1.2 build-project-on
+        run: just FISH_VERSION=${{matrix.fish_version}} build-project-on
       - name: Test project
-        run: just FISH_VERSION=3.1.2 test-project-on
+        run: just FISH_VERSION=${{matrix.fish_version}} test-project-on
